# Retail-Agentic-Commerce

docs/: NEMO_AGENT_TOOLKIT_DOCUMENTATION.md
docs/features/: feature-07-recommendation-agent.md
src/agents/: AGENTS.md  README.md  pyproject.toml  register.py
src/agents/configs/: recommendation.yml
tests/agents/: test_recommendation_workflow_contract.py
